@@ -35,6 +35,7 @@ include_HEADERS = \
 	kronrodintegral.hpp \
 	lexicographicalview.hpp \
 	linearinterpolation.hpp \
+	linearleastsquaresregression.hpp \
 	loglinearinterpolation.hpp \
 	matrix.hpp \
 	multicubicspline.hpp \
@@ -71,6 +72,7 @@ libMath_la_SOURCES = \
 	generalstatistics.cpp \
 	incompletegamma.cpp \
 	incrementalstatistics.cpp \
+	linearleastsquaresregression.cpp \
 	normaldistribution.cpp \
 	primenumbers.cpp \
 	pseudosqrt.cpp \
